--- a/marmed.css
+++ b/marmed.css
@@ -8,6 +8,7 @@ body{
 }
 
 
+
    
 .A{
 	width: 380px;
@@ -24,7 +25,7 @@ body{
 
 .B h1{
 	color: #333;
-	font-size: 45px
+	font-size: 45px;
 	margin-bottom: 80px;
 }
 
@@ -44,6 +45,9 @@ body{
 	margin-bottom: 40px;
 
 }
+
+
+
 
 .C button {
 	padding-left: 0;
@@ -66,6 +70,7 @@ body{
 
 }
 
+
 .C span{
 	position: relative;
 }
@@ -73,12 +78,68 @@ body{
 .C  i{
 	position: absolute;
 	left: 15px;
-	color: #333
-	font-size 16px;
+	color: #333;
+	font-size: 16px;
 	top:2px;
-};
+}
 
-.marwmed1{
+header {
+	position: fixed;
+	background: #22242A;
+	padding: 20px;
+	width: 100%;
+	height: 30px;
+}
+.left h3{
+	color: #fff;
+	margin: 0px;
+	text-transform: uppercase;
+	font-size: 22px;
+	font-weight: 900;
+}
+
+.left span{
+	color: #1DC4E7;
+}
+
+.logout{
+	padding: 5px;
+	background-color: #19B3D3;
+	text-decoration: none;
+	float: right;
+	margin-top: -30px;
+	margin-right: 40px;
+	border-radius: 2px;
+	font-size: 15px;
+	font-weight: 600;
+	color: #fff;
+	transition: 0.5
+}
+
+.logout:hover{
+	background: #0D9DBB;
+
+}
+
+
+
+
+
+
+
+/*.left {
+	display: flex;
+}
+*/
+
+
+/*.marwmed1{
+	background-image: url("https://images.pexels.com/photos/574283/pexels-photo-574283.jpeg?auto=compress&cs=tinysrgb&fit=crop&h=627&w=1200");
+}*/
+
+/*#account{
 	background-image: url("https://images.pexels.com/photos/574283/pexels-photo-574283.jpeg?auto=compress&cs=tinysrgb&fit=crop&h=627&w=1200");
 }
+
+*/
 
